--- a/contents/chp02.tex
+++ b/contents/chp02.tex
@@ -526,7 +526,7 @@ adjacent concrete box beams, providing improved durability, lower cost, easier i
 construction.
 
 % \subsection{Substructure Componet}
-\subsection{下部结构\glsentrytext{componet}}
+\subsection{下部结构\glsentrytext{component}}
 
 The substructure component includes all structural elements required to support the superstructure and is typically defined from the underside of bridge bearings down through the foundation. The function of these elements is to transfer all vertical loads from the superstructure to the foundation supporting strata and to resist horizontal forces acting on the bridge. The transfer of load to the supporting ground can be either through spread foundations, piles, or drilled shafts, depending on the strength and stability of subsurface geotechnical conditions. This component typically includes pier and abutment subsystems, each including several elements, as shown in \cref{fig:substructure-component}.
 
