--- a/appendix/B.tex
+++ b/appendix/B.tex
@@ -6,17 +6,17 @@
 % \section{BACKGROUND}
 \section{背景}
 % A skewed bridge is a bridge with the longitudinal axis at an angle other than 90° with the piers and abutments. The skew angle, θ, is shown in Figure B.1. With skewed integral abutment bridges, the soil passive pressure developed in response to thermal elongation has a component in the transverse direction as illustrated in Figure B.1. Within certain limits of the skew angle, soil friction on the abutment will resist the transverse component of passive pressure. However, if the soil friction is insufficient, then, depending on the transverse stiffness of the abutment, either significant transverse forces or significant transverse movements could be generated.
-斜桥是纵轴与桥墩和桥台呈非 \qty{90}{\degree} 角度的桥梁。 斜交角 $\theta$ 如\cref{fig:skewed-bridge-thermal-elongation} 所示。对于斜交的整体式桥台桥，在温度作用下产生的台背土被动压力在横向方向上有一个分量，如\cref{fig:skewed-bridge-thermal-elongation}所示。 在一定的斜交角范围内，桥台上的土壤摩擦力将抵抗被动压力的横向分量。 然而，如果土壤摩擦力不足，则根据桥台的横向刚度，可能会产生显着的横向力或显著的横向运动。
+斜桥是纵轴与桥墩和桥台呈非 \qty{90}{\degree} 角度的桥梁。 斜交角 $\theta$ 如\cref{fig:skewed-bridge-thermal-elongation} 所示。对于斜交的整体式桥台桥，在温度作用下产生的台背土被动压力在横向方向上有一个分量，如\cref{fig:skewed-bridge-thermal-elongation} 所示。 在一定的斜交角范围内，桥台上的土壤摩擦力将抵抗被动压力的横向分量。 然而，如果土壤摩擦力不足，则根据桥台的横向刚度，可能会产生显著的横向力或显著的横向运动。
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics{skewed-bridge-thermal-elongation.pdf}
   % \caption{Components of abutment soil passive pressure response to thermal elongation in skewed integral abutment bridges}
   \caption{斜交整体式桥台在温度作用下产生的桥台土被动压力分量}
-  \label{fig:skewed-bridge-thermal-elongation}
+  \label{fig:skewed-bridge-thermal-elongation} 
 \end{figure}
 
 % \cref{fig:two-span-skewed-bridge} shows a two-span bridge with a skew angle of \ang{45} (Nicholson et al. 1997). This bridge was constructed in 1969 with semi-integral abutments. The semi-integral construction included an integral end diaphragm that was designed to move with the superstructure which slides longitudinally, and is guided transversely by, relatively stiff abutments.
-\cref{fig:two-span-skewed-bridge} 显示了一个斜角为 \ang{45} 的双跨桥（Nicholson 等人，1997 年）。 这座桥建于 1969 年，采用半整体式桥台。 半整体式结构包括一个整体式端隔板，设计用于与纵向滑动的上部结构一起移动，并由相对坚硬的桥台横向引导。
+\cref{fig:two-span-skewed-bridge} 显示了一个斜交角为 \ang{45} 的双跨桥（Nicholson 等人，1997 年）。 这座桥建于 1969 年，采用半整体式桥台。 半整体式结构包括一个整体式端隔板，设计用于与纵向滑动的上部结构一起移动，并由相对坚硬的桥台横向引导。
 
 \begin{figure}
   \includegraphics[width=0.8\linewidth]{two-span-skewed-bridge.jpg}
@@ -49,7 +49,7 @@
 \cref{fig:barrier-distress} 显示了引道板末端 \cref{fig:asphalt-overlay-distress} 的屏障墙接缝的近距离视图。 隔离墙中的伸缩缝垂直于纵向，不能适应横向移动。
 
 \begin{figure}
-  \includegraphics[width=0.7\linewidth]{barrier-distress.jpg}
+  \includegraphics[width=0.8\linewidth]{barrier-distress.jpg}
   % \caption{Barrier distress at west abutment. (Tabatabai et al. 2005)}
   \caption{西桥台护栏损坏}
   \label{fig:barrier-distress}
