--- a/contents/chp05.tex
+++ b/contents/chp05.tex
@@ -129,7 +129,8 @@ One of the leading causes of concrete rehabilitation is corrosion-induced concre
 The presence of cracks and the ability of chlorides to permeate the concrete allow chlorides to get to the reinforcing steel, thus compromising the corrosion resistance provided by concrete’s naturally high alkalinity.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.6\linewidth]{corrosion-induced-delamination.jpg}
+  % \caption{Corrosion-induced delamination on a bridge pier}
   \caption{Corrosion-induced delamination on a bridge pier}
   \label{fig:corrosion-induced-delamination}
 \end{figure}
@@ -164,7 +165,7 @@ The detrimental effects caused by calcium acetate were much less severe than tho
 use of these non-chloride-bearing salts has not gained wide acceptance due to cost and the distress they cause.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.6\linewidth]{chloride-induced-corrosion-steelbar.jpg}
   % \caption{Chloride-induced corrosion of reinforcing steel}
   \caption{Chloride-induced corrosion of reinforcing steel}
   \label{fig:chloride-induced-corrosion-steelbar}
@@ -440,12 +441,14 @@ Electrochemical chloride extraction was used to reduce the chloride content of t
 Additional piers were treated during the fall of 1997 as part of the next phase of work on this project. The longterm results from these more recent tests are expected to be similar to the electrochemical chloride extraction trial completed in 1989.
 
 \begin{table}
-  \caption{Corrosion Potential Measurements}\label{tab:corrosion-potential-measurements}
+  \caption{Corrosion Potential Measurements}
+  \label{tab:corrosion-potential-measurements}
   % \input{tables/filename}
 \end{table}
 
 \begin{table}
-  \caption{Corrosion Current Measurements}\label{tab:corrosion-current-measurements}
+  \caption{Corrosion Current Measurements}
+  \label{tab:corrosion-current-measurements}
   % \input{tables/filename}
 \end{table}
 
@@ -453,8 +456,10 @@ Additional piers were treated during the fall of 1997 as part of the next phase 
 Galvanic anodes have also been developed for more global corrosion control. One such configuration is the system installed to repair and protect severely damaged and corroding bridge abutments in the Midwest (\cref{fig:distribute-anode}). The abutments had been contaminated with chlorides causing corrosion of the reinforcing steel and significant concrete damage.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{A distributed anode system used for corrosion control bridge abutment in the Midwest.}\label{fig:distribute-anode}
+  \includegraphics[width=0.6\linewidth]{distribute-anode.jpg}
+  % \caption{A distributed anode system used for corrosion control bridge abutment in the Midwest.}
+  \caption{A distributed anode system used for corrosion control bridge abutment in the Midwest.}
+  \label{fig:distribute-anode}
 \end{figure}
 
 As part of the rehabilitation, which also included enlargement and strengthening of the abutment, the cracked and spalled concrete was removed. \cref{fig:abutment-section-rehabilitation} shows the cross-sectional detail of the rehabilitation system. Elongated anodes were connected to the existing reinforcing steel and encased in a new layer of concrete to reface the abutment wall. The purpose of the anodes was to protect the existing steel from chloride-induced corrosion. This allowed uncracked chloride-contaminated concrete to remain in place, and thereby reduce concrete breakout and the need for structural shoring. The cross-sectional configuration of the repaired abutment wall and adjoining structural elements is shown in \cref{fig:abutment-section-rehabilitation}.
@@ -478,15 +483,19 @@ The current output, shown in {fig:current-output}, appears to be strongly relate
 
 
 \subsection{Project Overview: Corrosion Prevention Using Galvanic Anodes}
-The oldest site trial of discrete galvanic anodes is over 10 years old (\cref{fig:bridge=north-side}). To verify the performance of the anodes, 12 anodes were installed in an otherwise conventional patch repair on the soffit of a bridge beam (\cref{fig:installation-anodes}). The performance of these anodes was monitored with time.
+The oldest site trial of discrete galvanic anodes is over 10 years old (\cref{fig:bridge-north-side}). To verify the performance of the anodes, 12 anodes were installed in an otherwise conventional patch repair on the soffit of a bridge beam (\cref{fig:installation-anodes}). The performance of these anodes was monitored with time.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{North side of bridge.}\label{fig:bridge=north-side}
+  \includegraphics[width=0.8\linewidth]{bridge-north-side.jpg}
+  % \caption{North side of bridge.}
+  \caption{North side of bridge.}
+  \label{fig:bridge-north-side}
 \end{figure}
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Installation of anodes within the repaired area of a beam also showing control box and wiring.}\label{fig:installation-anodes}
+  \includegraphics[width=0.8\linewidth]{installation-anodes.jpg}
+  % \caption{Installation of anodes within the repaired area of a beam also showing control box and wiring.}
+  \caption{Installation of anodes within the repaired area of a beam also showing control box and wiring.}
+  \label{fig:installation-anodes}
 \end{figure}
 
 The anodes were inserted around the perimeter of the repair area between 600mm and 700mm centers (\cref{fig:installation-anodes}). The anodes were installed to enable monitoring by connecting a single wire from each anode to a control box
