--- a/contents/chp07.tex
+++ b/contents/chp07.tex
@@ -89,7 +89,7 @@ Dye penetrant consists of three parts; cleaning the area of a suspected crack, a
 finally the application of a white developer. Figure 7.3 shows a crack exposed using a red dye penetrant.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.5\linewidth]{crack-exposed.jpg}
   \caption{Crack exposed using a red dye penetrant}
   \label{fig:crack-exposed}
 \end{figure}
@@ -190,7 +190,7 @@ ranges experienced by that section. (See Figure 7.6.) Doubler plates are designe
 the cracked section to the uncracked state using design processes identical to those of field splice connections.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.5\linewidth]{bolted-double-plate-repair.jpg}
   \caption{Photo of bolted doubler plate repair}
   \label{fig:bolted-double-plate-repair}
 \end{figure}
@@ -437,7 +437,8 @@ Assessing the integrity of eyebars, especially in old truss bridges, is very dif
 extensive corrosion is shown in \cref{fig:corrosion-eyebar-connection}.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.5\linewidth]{corrosion-eyebar-connection.jpg}
+  % \caption{Corrosion of eyebar connection.}
   \caption{Corrosion of eyebar connection.}
   \label{fig:corrosion-eyebar-connection}
 \end{figure}
@@ -449,7 +450,7 @@ the existing ones in place. \cref{fig:retrofit-option-eyebar-connection} shows a
 bridges. (Azizinamini 2002)
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.5\linewidth]{retrofit-option-eyebar-connection.jpg}
   \caption{Retrofit option for eyebar connection.}
   \label{fig:retrofit-option-eyebar-connection}
 \end{figure}
