--- a/contents/chp08.tex
+++ b/contents/chp08.tex
@@ -43,8 +43,10 @@ connected to the approach road pavement with no joint.
 \cref{fig:jointless-element} shows a rendering of a typical layout of a jointless bridge, shown with the superstructure cast in an integral abutment.
 
 \begin{figure}
-  % \includegraphics[height=5cm]{jointless-element1}
-  \caption{无缝整体桥的\gls*{element}}\label{fig:jointless-element}
+  \includegraphics[height=4.5cm]{jointless-element1.jpg}
+  \includegraphics[height=4.5cm]{jointless-element2.jpg}
+  \caption{无缝整体桥的\gls*{element}}
+  \label{fig:jointless-element}
 \end{figure}
 
 \subsection{Integral Bridges}
@@ -81,7 +83,7 @@ bridge system for jointed pavement types used in the United States was developed
 described in Appendix E. Additional information on this system can be found in Ala (2011), as well as in Ala and
 Azizinmanini (2013a, 2013b).
 
-Figure 8.2 shows, schematically, the main elements of the seamless bridge system developed by SHRP 2 R19A
+\cref{fig:seamless-bridge} shows, schematically, the main elements of the seamless bridge system developed by SHRP 2 R19A
 (Ala 2011; Ala and Azizinamini 2013a; Ala and Azizinamini 2013b). The main elements of the system consist of
 bridge deck, transition zone and roadway pavement. The bridge movement is accommodated within the transition
 zone, and the movement at the end of the transition zone is relatively small. This eliminates having expansion joints at
@@ -90,8 +92,10 @@ near the abutment is increased to account for lack of support from soil below. T
 information about this new system.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Seamless bridge system}\label{fig:seamless-bridge}
+  \includegraphics[width=\linewidth]{seamless-bridge.jpg}
+  % \caption{Seamless bridge system}
+  \caption{Seamless bridge system}
+  \label{fig:seamless-bridge}
 \end{figure}
 
 \subsection{Advantages of Jointless Bridges}
@@ -1162,8 +1166,10 @@ There are several advantages of this system:
 \end{itemize}
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Prefabricated pile cap}
+  \includegraphics[height=4.5cm]{prefabricated-pile-cap1.png}
+  \includegraphics[height=4.5cm]{prefabricated-pile-cap2.png}
+  % \caption{Prefabricated pile cap}
+  \caption{预制桩帽}
   \label{fig:prefabricated-pile-cap}
 \end{figure}
 
@@ -1306,8 +1312,20 @@ is made continuous over the pier. This can be accomplished in one of two ways:
 This construction method is shown conceptually in \cref{fig:sdcl-details} for an integral pier. The beams are placed as simply supported over the pier; the beams are either spliced mechanically or additional reinforcing is provided for the diaphragm; and finally, a closure pour is made.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Simple for dead and continuous for live pier detail after the placing of girders (a and b), and after the closure pour (c). (Azizinamini et al. 2008)}
+  \begin{minipage}{0.32\linewidth}\centering
+    \includegraphics[height=3.5cm]{sdcl1.jpg}
+    \subcaption{架设完成}
+  \end{minipage}%
+  \begin{minipage}{0.33\linewidth}\centering
+    \includegraphics[height=3.5cm]{sdcl2.png}
+    \subcaption{架设完成（细部）}
+  \end{minipage}%
+  \begin{minipage}{0.35\linewidth}\centering
+    \includegraphics[height=3.5cm]{sdcl3.jpg}
+    \subcaption{合龙段浇筑完成}
+  \end{minipage}
+  % \caption{Simple for dead and continuous for live pier detail after the placing of girders (a and b), and after the closure pour (c). (Azizinamini et al. 2008)}
+  \caption{\acrlong*{sdcl}细部构造}
   \label{fig:sdcl-details}
 \end{figure}
 
@@ -1326,29 +1344,18 @@ need for bearings at the piers and can increase clearance, it introduces more co
 the piers (see \cref{fig:integral-cap-completed}).
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.7\linewidth]{integral-cap-completed.jpg}
   \caption{Integral cap as completed}
   \label{fig:integral-cap-completed}
 \end{figure}
 
-The longitudinal deflection movement of the foundation and the pier accommodates the total longitudinal
-movement expected at the top of the integral piers. (See Section 8.6.2.10 for additional information.) When designing
-the integral cap, the connection between the beams, continuity diaphragm, pier cap, and pier column must be
-sufficient to transfer the moments resulting from this deflection. Resolution of these forces should be computed by an
-analytical method or structural model with the ability to properly capture the behavior of the whole bridge system.
+The longitudinal deflection movement of the foundation and the pier accommodates the total longitudinal movement expected at the top of the integral piers. (See Section 8.6.2.10 for additional information.) When designing the integral cap, the connection between the beams, continuity diaphragm, pier cap, and pier column must be sufficient to transfer the moments resulting from this deflection. Resolution of these forces should be computed by an analytical method or structural model with the ability to properly capture the behavior of the whole bridge system.
 
 \paragraph{Fixed (Pinned) and Expansion Pier Caps}
 
-Similar to the integral pier cap, the superstructure is made continuous over the pier for both fixed (pinned) and
-expansion pier caps. The difference is that it is not made integral with the pier caps. The connection between the
-superstructure and the pier is treated with traditional bearings.
+Similar to the integral pier cap, the superstructure is made continuous over the pier for both fixed (pinned) and expansion pier caps. The difference is that it is not made integral with the pier caps. The connection between the superstructure and the pier is treated with traditional bearings.
 
-Various details are used over the interior supports of multi-span bridges to eliminate joints. One of the concepts
-implemented by a number of owner agencies for concrete bridges has been the use of simple spans for dead load made
-continuous for live load (Freyermuth 1969; Oesterle et al. 1989) The girders are simply-supported for dead load, but
-continuity is achieved with deck steel as negative moment reinforcement over the piers. Also, the girders are made
-integral with the interior pier diaphragms and commonly positive moment reinforcement is included as shown in
-\cref{fig:continuity-live-load-connection}.
+Various details are used over the interior supports of multi-span bridges to eliminate joints. One of the concepts implemented by a number of owner agencies for concrete bridges has been the use of simple spans for dead load made continuous for live load (Freyermuth 1969; Oesterle et al. 1989) The girders are simply-supported for dead load, but continuity is achieved with deck steel as negative moment reinforcement over the piers. Also, the girders are made integral with the interior pier diaphragms and commonly positive moment reinforcement is included as shown in \cref{fig:continuity-live-load-connection}.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
@@ -1789,7 +1796,7 @@ each structural item that might be affected by the removal of the deck. This inc
 buckling stability. It is recommended that this be used only for partial width deck repair.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.6\linewidth]{flanges-buckled.jpg}
   \caption{Buckled girder flanges due to improper deck sequencing.}
   \label{fig:flanges-buckled}
 \end{figure}
