--- a/contents/chp09.tex
+++ b/contents/chp09.tex
@@ -313,7 +313,7 @@ series. The separator beams are supported on support beams at frequent intervals
 shows a schematic of one commercially available modular joint.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
+  \includegraphics[width=0.5\linewidth]{modular-expansion-joint.png}
   \caption{Modular expansion joint system}
   \label{fig:modular-expansion-joint}
 \end{figure}
